adding real samples page...

--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -49,34 +49,57 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth left-column spacing-top border-top">
-           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="370">
+         <td class="mWidth left-column spacing-top border-top" valign="top">
+           <!--[if (gte mso 9)|(IE)]>
+              <table width="370" align="center">
+              <tr>
+              <td width="130" valign="top">
+            <![endif]-->
+           <img align="left" src="http://placehold.it/130x130" width="130" height="130" alt="Placeholder image" class="mFullImage">
+           <!--[if (gte mso 9)|(IE)]>
+                </td>
+                <td width="230" valign="top">
+           <![endif]-->
+           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
             <tr>
-              <!-- NO MOBILE -->
-              <td width="120" valign="top">
-                <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
-              </td>
-              <td align="left" class="spacing-left align-left" width="230">
-                <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              </td>
-            </tr>
-           </table>
-         </td>
-       </tr>
-        <tr>
-         <td class="mWidth left-column spacing-top border-top">
-           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="370">
-            <tr>
-              <td width="120" valign="top">
-                <img src="http://placehold.it/120x120" width="120" height="120" alt="Placeholder image" class="mFullImage">
-              </td>
               <td align="left" class="spacing-left align-left" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
          </table>
+         <!--[if (gte mso 9)|(IE)]>
+                </td>
+              </tr>
+            </table>
+         <![endif]-->
+         </td>
+       </tr>
+        <tr>
+         <td class="mWidth left-column spacing-top border-top" valign="top">
+           <!--[if (gte mso 9)|(IE)]>
+              <table width="370" align="center">
+              <tr>
+              <td width="130" valign="top">
+            <![endif]-->
+           <img align="left" src="http://placehold.it/130x130" width="130" height="130" alt="Placeholder image" class="mFullImage">
+           <!--[if (gte mso 9)|(IE)]>
+                </td>
+                <td width="230" valign="top">
+           <![endif]-->
+           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
+            <tr>
+              <td align="left" class="spacing-left align-left" width="230" >
+                <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </td>
+            </tr>
+         </table>
+         <!--[if (gte mso 9)|(IE)]>
+                </td>
+              </tr>
+            </table>
+         <![endif]-->
          </td>
        </tr>
        <tr>
@@ -197,7 +220,7 @@
       </tr>
       <tr>
         <td align="left" class="mWidth spacing-top right-column align-left">
-          <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
+          <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="mFullImage spacing-top">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
@@ -214,7 +237,7 @@
       </tr>
       <tr>
         <td align="left" class="mWidth spacing-top right-column align-left">
-          <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
+          <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="mFullImage spacing-top">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
@@ -249,6 +272,6 @@
           </td>
         </tr>
       </table>
-      <![endif]-->
+   <![endif]-->
   </td>
 </tr>
