--- a/source/_includes/mods/mod-footer-socials.html
+++ b/source/_includes/mods/mod-footer-socials.html
@@ -1,5 +1,5 @@
 <tr>
-  <td align="center" class="spacing-top">
+  <td align="center" class="spacing-top spacing-bottom">
       <table cellpadding="0" cellspacing="0" width="300">
       <tr>
         <td align="center" colspan="5" class="footer-title">
@@ -10,15 +10,35 @@
         <td align="center">
           <table align="center" border="0" cellpadding="0" cellspacing="0">
             <tr>
-              <td align="center" class="spacing-top spacing-right"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
-              <td align="center" class="spacing-top spacing-left spacing-right"><a href="https://twitter.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a></td>
-              <td align="center" class="spacing-top spacing-left spacing-right"><a href="https://www.instagram.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/instragram-micon.png" alt="Instagram" border="0"></a></td>
-              <td align="center" class="spacing-top spacing-left spacing-right"><a href="https://www.youtube.com/user/UCSantaCruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/youtube-micon.png" alt="Youtube" border="0"></a></td>
-              <td align="center" class="spacing-top spacing-left spacing-left"><a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a></td>
+              <td align="center" class="spacing-top spacing-right">
+                <a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a>
+              </td>
+              <td align="center" class="spacing-top spacing-left spacing-right">
+                <a href="https://twitter.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/twitter-micon.png" alt="Twitter" border="0"></a>
+              </td>
+              <td align="center" class="spacing-top spacing-left spacing-right">
+                <a href="https://www.instagram.com/ucsc"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/instragram-micon.png" alt="Instagram" border="0"></a>
+              </td>
+              <td align="center" class="spacing-top spacing-left spacing-right">
+                <a href="https://www.youtube.com/user/UCSantaCruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/youtube-micon.png" alt="Youtube" border="0"></a>
+              </td>
+              <td align="center" class="spacing-top spacing-left spacing-left">
+                <a href="https://www.facebook.com/ucsantacruz"><img src="https://adminlb.imodules.com/s/1069/images/editor/mobile-placeholder-images/facebook-micon.png" alt="Facebook" border="0"></a>
+              </td>
             </tr>
           </table>
         </td>
       </tr>
     </table>
+    <div style="clear:both;">&nbsp;</div>
   </td>
 </tr>
+
+<!-- YUP! FIN -->
+      
+<tr>
+<td class="end-border spacing-top">
+  &nbsp;
+</td>
+</tr>
+</table>
