--- a/source/_includes/mods/mod-logo-blue.html
+++ b/source/_includes/mods/mod-logo-blue.html
@@ -1,6 +1,6 @@
 
 <tr>
-	<td class="logo-blue mWidth" bgcolor="#00458c">
+	<td align="left" class="logo-blue mWidth align-left" bgcolor="#00458c">
 			<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo_rev.png" alt="University of California, UC Santa Cruz">
       <!-- ASSET LOGO
 			{% image "logo_rev.png" %}
