--- a/source/_includes/mods/mod-logo.html
+++ b/source/_includes/mods/mod-logo.html
@@ -1,6 +1,6 @@
 
 <tr>
-	<td class="logo mWidth">
+	<td align="left" class="logo mWidth align-left">
 			<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png" alt="University of California, UC Santa Cruz">
       <!-- ASSET LOGO
 			{% image "logo.png" %}
