--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -16,7 +16,6 @@ h6 {
 h1 {
 	font-size: $font-h1;
 	margin: 0;
-	text-transform: uppercase;
 }
 
 h2 {
@@ -42,6 +41,10 @@ h4 {
 
 p {
 	font-size: 16px;;
+}
+
+.uppercase {
+	text-transform: uppercase;
 }
 
 .title {
