--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -1,5 +1,5 @@
 <tr>
-  <td class="section-title mWidth">
+  <td align="left" class="mWidth section-title align-left">
     <h2>THREE COLUMNS</h2>
   </td>
 </tr>
