--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -10,10 +10,10 @@
       <tr>
       <td width="192" valign="top">
   <![endif]-->
-    <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth align-left" width="193">
+    <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="190">
       <tr>
         <td class="mWidth large-spacing-right">
-          <img src="http://placehold.it/193x150" align="left" width="193" height="150" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/190x150" align="left" width="190" height="150" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
@@ -27,10 +27,10 @@
       </td>
       <td width="192" valign="top">
     <![endif]-->
-     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth align-left" width="193">
+     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="190">
       <tr>
         <td class="mWidth large-spacing-right">
-          <img src="http://placehold.it/193x150" align="left" width="193" height="150" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/190x150" align="left" width="190" height="150" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
@@ -44,10 +44,10 @@
       </td>
       <td width="192" valign="top">
     <![endif]-->
-     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="193" valign="top">
+     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="190" valign="top">
       <tr>
         <td class="mWidth">
-          <img src="http://placehold.it/193x150" align="left" width="193" height="150" alt="Placeholder image" class="mFullImage">
+          <img src="http://placehold.it/190x150" align="left" width="190" height="150" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
