--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -55,12 +55,18 @@
               <tr>
               <td width="130" valign="top">
             <![endif]-->
-           <img align="left" src="http://placehold.it/130x130" width="130" height="130" alt="Placeholder image" class="mFullImage">
+          <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="130">
+            <tr>
+              <td class="mWidth">
+                <img align="left" src="http://placehold.it/130x130" width="130" height="130" alt="Placeholder image" class="mFullImage">
+              </td>
+            </tr>
+          </table>
            <!--[if (gte mso 9)|(IE)]>
                 </td>
                 <td width="230" valign="top">
            <![endif]-->
-           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
+           <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
             <tr>
               <td align="left" class="spacing-left align-left" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
@@ -82,12 +88,18 @@
               <tr>
               <td width="130" valign="top">
             <![endif]-->
-           <img align="left" src="http://placehold.it/130x130" width="130" height="130" alt="Placeholder image" class="mFullImage">
+           <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="130">
+            <tr>
+              <td class="mWidth">
+                <img align="left" src="http://placehold.it/130x130" width="130" height="130" alt="Placeholder image" class="mFullImage">
+              </td>
+            </tr>
+          </table>
            <!--[if (gte mso 9)|(IE)]>
                 </td>
                 <td width="230" valign="top">
            <![endif]-->
-           <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
+           <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="230">
             <tr>
               <td align="left" class="spacing-left align-left" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
