--- a/source/_layouts/single-column-and-two-columns.html
+++ b/source/_layouts/single-column-and-two-columns.html
@@ -14,13 +14,9 @@
       {% include mods/mod-email-title.html %}
       <!-- END EMAIL TITLE -->
 
-      <!-- FULL IMAGE W/ CAPTION -->
-      {% include mods/full-top-image.html %}
-      <!-- END FULL IMAGE W/ CAPTION -->
-
-      <!-- FULL WIDTH -->
-      {% include mods/mod-full-width.html %}
-      <!-- END FULL WIDTH -->
+      <!-- INTRO STORY -->
+      {% include mods/mod-intro-story.html %}
+      <!-- END INTRO STORY -->
 
       <!-- TWO COLUMNS -->
       {% include mods/mod-two-columns.html %}
