--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -56,6 +56,11 @@ a:hover {
 	padding-top: 10px;
 }
 
+.large-spacing-top {
+	padding-bottom: 5px;
+	padding-top: 20px;
+}
+
 .spacing-top-bottom {
 	padding-top: 5px;
 	padding-bottom: 5px;
