Working on newsletter, content

--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -86,8 +86,16 @@ a:hover {
 	padding-right: 15px;
 }
 
+.xlarge-spacing-right {
+	padding-right: 20px;
+}
+
 .large-spacing-left {
 	padding-left: 15px;
+}
+
+.xlarge-spacing-left {
+	padding-left: 20px;
 }
 
 .float-left {
