--- a/source/_includes/mods/mod-features.html
+++ b/source/_includes/mods/mod-features.html
@@ -26,6 +26,10 @@
      </tbody>
    </table>
   <!-- LEFT COLUMN -->
+  <!--[if (gte mso 9)|(IE)]>
+      </td>
+      <td width="295" valign="top">
+  <![endif]-->
   <!-- RIGHT COLUMN -->
    <table align="right" border="0" cellpadding="0" cellspacing="0" width="295" class="mWidth">
      <tbody>
