--- a/source/_includes/samples/mod-three-columns.html
+++ b/source/_includes/samples/mod-three-columns.html
@@ -1,6 +1,6 @@
 <tr>
   <td align="left" class="mWidth section-title align-left">
-    <h2>COLUMN WITH THREE ITEMS</h2>
+    <h2>THREE COLUMNS</h2>
   </td>
 </tr>
 <tr>
@@ -12,12 +12,12 @@
   <![endif]-->
     <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="190">
       <tr>
-        <td class="mWidth large-spacing-right">
+        <td class="mWidth xlarge-spacing-right">
           <img src="http://placehold.it/190x150" align="left" width="190" height="150" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth large-spacing-right align-left">
+        <td align="left" class="mWidth xlarge-spacing-right align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
@@ -29,12 +29,12 @@
     <![endif]-->
      <table align="left" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="190">
       <tr>
-        <td class="mWidth large-spacing-right">
+        <td class="mWidth xlarge-spacing-right">
           <img src="http://placehold.it/190x150" align="left" width="190" height="150" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth large-spacing-right align-left">
+        <td align="left" class="mWidth xlarge-spacing-right align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
