Add mCenter for mobile center logo

--- a/source/_includes/mods/mod-logo-blue.html
+++ b/source/_includes/mods/mod-logo-blue.html
@@ -1,7 +1,7 @@
 
 <tr>
-	<td align="left" class="logo-blue mWidth align-left" bgcolor="#00458c">
-			<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo_rev.png" alt="University of California, UC Santa Cruz">
+	<td align="left" class="logo-blue mWidth mCenter align-left" bgcolor="#00458c">
+			<img src="http://messaging.ucsc.edu/images/logo.png" alt="University of California, UC Santa Cruz" width="220">
       <!-- ASSET LOGO
 			{% image "logo_rev.png" %}
 			 --> 
