adding text class

--- a/source/_includes/mods/mod-30-70.html
+++ b/source/_includes/mods/mod-30-70.html
@@ -19,12 +19,12 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth align-left">
+         <td class="mWidth align-left title">
            <h3><a href="#">Neque porro quisquam est qui</a></h3>
          </td>
        </tr>
        <tr>
-         <td class="mWidth align-left">
+         <td class="mWidth align-left text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
          </td>
        </tr>
@@ -44,12 +44,12 @@
          </td>
        </tr>
        <tr>
-         <td class="mWidth align-left">
+         <td class="mWidth align-left title">
            <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
          </td>
        </tr>
        <tr>
-         <td class="mWidth align-left">
+         <td class="mWidth align-left text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
