--- a/source/_includes/mods/mod-50-50.html
+++ b/source/_includes/mods/mod-50-50.html
@@ -16,8 +16,8 @@
   <table align="right" border="0" cellspacing="0" cellpadding="0" width="340" class="mWidth">
     <tr>
       <td class="mWidth spacing-top align-left">
-        <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+        <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
       </td>
     </tr>
   </table>
