--- a/source/_includes/mods/mod-logo.html
+++ b/source/_includes/mods/mod-logo.html
@@ -1,6 +1,6 @@
 
 <tr>
-	<td align="left" class="logo mWidth align-left">
+	<td align="left" class="logo mWidth mCenter align-left">
 			<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png" alt="University of California, UC Santa Cruz" width="220">
       <!-- ASSET LOGO
 			{% image "logo.png" %}
