--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -18,8 +18,8 @@
       </tr>
       <tr>
         <td align="left" class="mWidth xlarge-spacing-right align-left">
-          <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+          <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
     </table>
@@ -35,8 +35,8 @@
       </tr>
       <tr>
         <td align="left" class="mWidth xlarge-spacing-right align-left">
-          <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+          <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
     </table>
@@ -52,8 +52,8 @@
       </tr>
       <tr>
         <td align="left" class="mWidth align-left">
-          <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+          <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
     </table>
