--- a/source/_includes/mods/mod-two-columns-vertical.html
+++ b/source/_includes/mods/mod-two-columns-vertical.html
@@ -17,7 +17,7 @@
         </td>
         <td align="left" valign="top" class="large-spacing-right align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. </p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. </p>
         </td>
       </tr>
     </table>
@@ -32,7 +32,7 @@
         </td>
         <td align="left" valign="top align-left">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
         </td>
       </tr>
     </table>
