--- a/source/_includes/mods/mod-two-columns.html
+++ b/source/_includes/mods/mod-two-columns.html
@@ -24,7 +24,7 @@
          </td>
        </tr>
       <tr>
-         <td align="left" class="mWidth left-column align-left">
+         <td align="left" class="mWidth left-column align-left text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -44,7 +44,7 @@
          </td>
        </tr>
       <tr>
-         <td align="left" class="mWidth left-column align-left">
+         <td align="left" class="mWidth left-column align-left text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -70,7 +70,7 @@
             <tr>
               <td align="left" class="spacing-left align-left" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
          </table>
@@ -103,7 +103,7 @@
             <tr>
               <td align="left" class="spacing-left align-left" width="230" >
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
          </table>
@@ -117,7 +117,7 @@
        <tr>
          <td align="left" class="mWidth spacing-top border-top left-column align-left">
            <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
          </td>
        </tr>
     </tbody>
@@ -137,7 +137,7 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="right-column mWidth align-left">
+        <td align="left" class="right-column mWidth align-left text">
           <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image" class="mFullImage">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
@@ -148,7 +148,7 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth right-column align-left">
+        <td align="left" class="mWidth right-column align-left text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
           <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
             <tr>
@@ -168,47 +168,47 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth right-column align-left">
+        <td align="left" class="mWidth right-column align-left text">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth spacing-top-bottom right-column align-left">
+        <td align="left" class="mWidth spacing-top-bottom right-column align-left text">
           <strong>Date:</strong> dd/mm/yyyy
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth spacing-bottom right-column align-left">
+        <td align="left" class="mWidth spacing-bottom right-column align-left text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth right-column align-left">
+        <td align="left" class="mWidth right-column align-left text">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth spacing-top-bottom right-column align-left">
+        <td align="left" class="mWidth spacing-top-bottom right-column align-left text">
           <strong>Date:</strong> dd/mm/yyyy
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth spacing-bottom right-column align-left">
+        <td align="left" class="mWidth spacing-bottom right-column align-left text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth right-column align-left">
+        <td align="left" class="mWidth right-column align-left text">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth spacing-top-bottom right-column align-left">
+        <td align="left" class="mWidth spacing-top-bottom right-column align-left text">
           <strong>Date:</strong> dd/mm/yyyy
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth spacing-bottom right-column align-left">
+        <td align="left" class="mWidth spacing-bottom right-column align-left text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
@@ -234,7 +234,7 @@
         <td align="left" class="mWidth spacing-top right-column align-left">
           <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="mFullImage spacing-top">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
       <tr>
@@ -251,7 +251,7 @@
         <td align="left" class="mWidth spacing-top right-column align-left">
           <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="mFullImage spacing-top">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
       <!-- End text and photo -->
