--- a/source/_includes/mods/mod-full-col-text.html
+++ b/source/_includes/mods/mod-full-col-text.html
@@ -1,6 +1,6 @@
 <tr>
   <td align="center" class="mWidth spacing-top spacing-bottom spacing-left spacing-right">
-    <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+    <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
   </td>
 </tr>
