--- a/source/_includes/mods/mod-intro-story.html
+++ b/source/_includes/mods/mod-intro-story.html
@@ -9,6 +9,6 @@
 <tr>
   <td align="left" class="mWidth content align-left">
     <h2><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
   </td>
 </tr>
