--- a/source/_includes/mods/mod-two-columns-org.html
+++ b/source/_includes/mods/mod-two-columns-org.html
@@ -19,7 +19,7 @@
          </td>
        </tr>
       <tr>
-         <td class="mWidth left-column">
+         <td class="mWidth left-column text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -39,7 +39,7 @@
          </td>
        </tr>
       <tr>
-         <td class="mWidth left-column">
+         <td class="mWidth left-column text">
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
          </td>
        </tr>
@@ -52,7 +52,7 @@
               </td>
               <td class="spacing-left" width="230" class="mWidth">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
            </table>
@@ -67,7 +67,7 @@
               </td>
               <td class="spacing-left" width="230" class="mWidth">
                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
          </table>
@@ -76,7 +76,7 @@
        <tr style="page-break-before: always">
          <td class="mWidth spacing-top border-top left-column">
            <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
          </td>
        </tr>
     </tbody>
@@ -107,7 +107,7 @@
       </tr>
       <tr>
         <td class="mWidth right-column">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
           <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
             <tr>
               <td class="separator mWidth">
@@ -121,52 +121,52 @@
 
       <!-- Campus events -->
       <tr>
-        <td class="mWidth right-column">
+        <td class="mWidth right-column title">
           <h3>Campus Events</h3>
         </td>
       </tr>
       <tr>
-        <td class="mWidth right-column">
+        <td class="mWidth right-column text">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-top-bottom right-column">
+        <td class="mWidth spacing-top-bottom right-column text">
           <strong>Date:</strong> dd/mm/yyyy
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-bottom right-column">
+        <td class="mWidth spacing-bottom right-column text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
       <tr>
-        <td class="mWidth right-column">
+        <td class="mWidth right-column text">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-top-bottom right-column">
+        <td class="mWidth spacing-top-bottom right-column text">
           <strong>Date:</strong> dd/mm/yyyy
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-bottom right-column">
+        <td class="mWidth spacing-bottom right-column text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
       <tr>
-        <td class="mWidth right-column">
+        <td class="mWidth right-column text">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-top-bottom right-column">
+        <td class="mWidth spacing-top-bottom right-column text">
           <strong>Date:</strong> dd/mm/yyyy
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-bottom right-column">
+        <td class="mWidth spacing-bottom right-column text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </td>
       </tr>
@@ -189,7 +189,7 @@
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-top right-column">
+        <td class="mWidth spacing-top right-column text">
           <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -206,7 +206,7 @@
         </td>
       </tr>
       <tr>
-        <td class="mWidth spacing-top right-column">
+        <td class="mWidth spacing-top right-column text">
           <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
           <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
