Teaser p removed and add class text

--- a/source/_includes/mods/mod-intro-story.html
+++ b/source/_includes/mods/mod-intro-story.html
@@ -12,7 +12,7 @@
   </td>
 </tr>  
 <tr>
-  <td align="left" class="mWidth section-content align-left">
-<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
+  <td align="left" class="mWidth text section-content align-left">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.
   </td>
 </tr>
