--- a/source/_includes/mods/mod-50-50.html
+++ b/source/_includes/mods/mod-50-50.html
@@ -1,5 +1,5 @@
 <tr>
-  <td class="mWidth section-title align-left">
+  <td class="mWidth ucsc-yellow-title section-title align-left">
     <h2>FULL COLUMN 50/50</h2>
   </td>
 </tr>
@@ -15,8 +15,12 @@
 
   <table align="right" border="0" cellspacing="0" cellpadding="0" width="340" class="mWidth">
     <tr>
-      <td class="mWidth spacing-top align-left">
+      <td class="mWidth ucsc-title spacing-top align-left">
         <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+      </td>
+    </tr>
+    <tr>
+      <td class="mWidth uscc-text spacing-top align-left">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
       </td>
     </tr>
