--- a/source/_includes/mods/mod-full-width.html
+++ b/source/_includes/mods/mod-full-width.html
@@ -9,12 +9,12 @@
   </td>
 </tr>
 <tr>
-  <td align="left" class="mWidth section-content align-left title">
+  <td align="left" class="mWidth ucsc-title section-content align-left title">
     <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h3>
   </td>
 </tr>
  <tr>
-  <td align="left" class="mWidth section-content align-left text">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
+  <td align="left" class="mWidth ucsc-text section-content align-left text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.  
   </td>
 </tr>
