--- a/source/_includes/mods/mod-three-columns.html
+++ b/source/_includes/mods/mod-three-columns.html
@@ -17,8 +17,12 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth xlarge-spacing-right align-left">
+        <td align="left" class="mWidth ucsc-title xlarge-spacing-right align-left">
           <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+        </td>
+      </tr>
+      <tr>
+        <td align="left" class="mWidth ucsc-text xlarge-spacing-right align-left">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
@@ -34,8 +38,12 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth xlarge-spacing-right align-left">
+        <td align="left" class="mWidth ucsc-title xlarge-spacing-right align-left">
           <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+          </td>
+      </tr>
+      <tr>
+        <td align="left" class="mWidth ucsc-text xlarge-spacing-right align-left">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
@@ -51,8 +59,12 @@
         </td>
       </tr>
       <tr>
-        <td align="left" class="mWidth align-left">
+        <td align="left" class="mWidth ucsc-title align-left">
           <h3 class="title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+          </td>
+      </tr>
+      <tr>
+        <td align="left" class="mWidth ucsc-text xlarge-spacing-right align-left">
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
         </td>
       </tr>
