--- a/source/_includes/responsive-css.html
+++ b/source/_includes/responsive-css.html
@@ -11,5 +11,17 @@
       font-size: 16px !important;
      }
 
+     td[class~="ucsc-yellow-title"] {
+        font-size: 40px;
+      }
+
+      td[class~="ucsc-title"] {
+        font-size: 34px;
+      }
+
+      td[class~="ucsc-text"] {
+        font-size: 25px;
+      }
+
     }
   </style>
