--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -9,7 +9,7 @@
 
   
   <!--<link rel="stylesheet" type="text/css" media="screen" href="{% asset_path main.css %}" />-->
-
+  <!-- What the hell -->
   {% include responsive-css.html %}
   
   <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/main.css" />
