--- a/source/_includes/responsive-css.html
+++ b/source/_includes/responsive-css.html
@@ -11,17 +11,20 @@
       font-size: 16px !important;
      }
 
-     td[class~="ucsc-yellow-title"] {
+     td[class~="ucsc-email-title"] {
         font-size: 40px;
       }
 
+     td[class~="ucsc-yellow-title"] {
+        font-size: 35px;
+      }
+
       td[class~="ucsc-title"] {
-        font-size: 34px;
+        font-size: 30px;
       }
 
       td[class~="ucsc-text"] {
         font-size: 25px;
       }
-
     }
   </style>
