--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -11,7 +11,8 @@
 }
 
 .content {
-	padding: 10px 15px;
+	padding: 10px 20px;
+	width: 600px;
 }
 
 .caption {
@@ -23,6 +24,7 @@
 	font-family: $font-sans;
 	padding-left: 15px;
 	padding-right: 15px;
+	width: 610px;
 }
 
 .section-content h3,
