Removed width 610px

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -23,8 +23,7 @@
 	color: $dark-gray;
 	font-family: $font-sans;
 	padding-left: 15px;
-	padding-right: 15px;
-	width: 610px;
+	padding-right: 15px;=
 }
 
 .section-content h3,
