--- a/source/_layouts/newsletter.html
+++ b/source/_layouts/newsletter.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-  	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="main">
+  	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="mWidth main">
       
       <!-- LOGO -->
       {% include mods/mod-logo.html %}
