email-title style

--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -50,6 +50,11 @@ p {
 	text-transform: uppercase;
 }
 
+.email-title {
+	color: $black;
+	padding: 0 15px 10px;
+}
+
 .title {
 	color: $black;
 	padding: 0 0 10px;
