--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -22,7 +22,7 @@
 	color: $dark-gray;
 	font-family: $font-sans;
 	padding-left: 15px;
-	padding-right: 15px;=
+	padding-right: 15px;
 }
 
 .section-content h3,
