--- a/source/_includes/mods/mod-email-title.html
+++ b/source/_includes/mods/mod-email-title.html
@@ -1,5 +1,5 @@
 <tr>
-	<td align="left" class="mWidth email-title align-left">
+	<td align="left" class="mWidth title align-left">
 	  <h1 class="align-left">Email Title</h1>
 	</td>
 </tr>
